# lora-tunning

./: .env  .gitignore  lora_tunning.py  main.py  pyproject.toml  readme.md  requirements.txt
lora_tunning/: __init__.py  analyse.py  constants.py  lora_tunning.py  models.py  reward.py  utils.py
lora_tunning/algorithms/gradient/: __init__.py  gradient_bandit.py
lora_tunning/algorithms/mab/: multi_armed_bandit.py  readme.md
lora_tunning/algorithms/mab_decay/: __init__.py  multi_armed_bandit_decay.py
lora_tunning/algorithms/mab_reward_exponential/: multi_armed_bandit_reward_exponential.py
lora_tunning/algorithms/ucb/: models.py  ucb.py
scripts/: reset.py
src/: __init__.py  constants.py  lora.py  lora_tunning.py  models.py  multi_armed_bandit.py  reward.py  test_utils.py  utils.py
src/algorithms/: __init__.py  utils.py
src/gradient_bandits/: gradient_bandit.py  readme.md
src/lora/: __init__.py  lora.py  lora_base.py  lora_hardware.py  lora_hardware_utils.py  lora_simulation.py  lora_static.py  test_lora_hardware_utils.py
src/mab/: multi_armed_bandit.py  readme.md
src/mab-decay/: multi_armed_bandit_decay.py
src/mab-reward-exponential/: __init__.py  multi_armed_bandit_reward-exponential.py
src/mab_decay/: multi_armed_bandit_decay.py  readme.md
src/mab_reward_exponential/: __init__.py  multi_armed_bandit_reward_exponential.py  readme.md
src/mabd/: multi_armed_bandit_decay.py  readme.md
src/qlearning/: q_learning.py
src/ucb/: __init__.py  ucb.py
tests/: test_reward.py
tools/: article1.ipynb  article2.ipynb  chart.ipynb  charts.ipynb
(+106 files in other folders)
